--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,32 @@
+alembic==1.8.1
 astroid==2.12.5
 attrs==22.1.0
 autopep8==1.7.0
 click==8.1.3
 dill==0.3.5.1
 Flask==2.2.2
+Flask-Migrate==3.1.0
+Flask-SQLAlchemy==2.5.1
+greenlet==1.1.3
 iniconfig==1.1.1
 isort==5.10.1
 itsdangerous==2.1.2
 Jinja2==3.1.2
 lazy-object-proxy==1.7.1
+Mako==1.2.1
 MarkupSafe==2.1.1
 mccabe==0.7.0
 packaging==21.3
 platformdirs==2.5.2
 pluggy==1.0.0
+psycopg2-binary==2.9.3
 py==1.11.0
 pycodestyle==2.9.1
 pylint==2.15.0
 pyparsing==3.0.9
 pytest==7.1.2
 python-dotenv==0.20.0
+SQLAlchemy==1.4.40
 toml==0.10.2
 tomli==2.0.1
 tomlkit==0.11.4
