--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ Flask==2.2.2
 Flask-Migrate==3.1.0
 Flask-SQLAlchemy==2.5.1
 greenlet==1.1.3
+gunicorn==20.1.0
 iniconfig==1.1.1
 isort==5.10.1
 itsdangerous==2.1.2
