wip: docker creating

--- a/.github/workflows/tests_on_push.yaml
+++ b/.github/workflows/tests_on_push.yaml
@@ -38,3 +38,9 @@ jobs:
         run: pytest
         env:
           DATABASE_HOST: postgres
+      - name: Login Heroku
+        env:
+          HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
+        run: heroku container:login
+      - name: Build and push to Heroku
+        run: heroku container:push -a ${{ secrets.HEROKU_APP_NAME }} web
