--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,12 @@ services:
     networks:
       - postgres
     restart: unless-stopped
+  web:
+    build: .
+    ports:
+      - "8000:8000"
+    environment:
+      DATABASE_HOST: oipie
 networks:
   postgres:
     driver: bridge
