ci: integration the ci/cd
* feat: adds procfile

* feat: integration of postgres on deployed

* fix: change databse url

* fix: postgres

* fix: update db

* testing: db connection

* testing: db connection

* wip: docker creating

* ci: set up Dockerfile and docker-compose

* fix: install heroku on deploy

* fix: update cd

* fix: update the deployments only on master

* ci: includes ci steps

* ci: define merge master ci

* ci: fix jobs naming

* ci: namin on action

Co-authored-by: Jaume Moreno <morenocantoj@gmail.com>

--- a/.github/workflows/branch_push.yaml
+++ b/.github/workflows/branch_push.yaml
@@ -3,8 +3,11 @@ on:
   push:
     branches:
       - "*"
+      - "!master"
+  workflow_call:
+
 jobs:
-  build:
+  test:
     runs-on: ubuntu-latest
     container: "python:3.10-slim"
     services:
