--- a/.github/workflows/branch_push.yaml
+++ b/.github/workflows/branch_push.yaml
@@ -29,6 +29,7 @@ jobs:
           --health-timeout 5s
           --health-retries 5
     steps:
+      - uses: actions/checkout@v3
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
