--- a/.github/workflows/merge_master.yaml
+++ b/.github/workflows/merge_master.yaml
@@ -8,7 +8,7 @@ jobs:
     name: Run tests and linter
     runs-on: ubuntu-latest
     steps:
-      - uses: Oipie/oipie-api-core/.github/workflows/branch_push
+      - uses: Oipie/oipie-api-core/.github/workflows/branch_push@dev
   deploy:
     runs-on: ubuntu-latest
     needs: tests
