--- a/.github/workflows/merge_master.yaml
+++ b/.github/workflows/merge_master.yaml
@@ -5,10 +5,7 @@ on:
       - "dev"
 jobs:
   tests:
-    name: Run tests and linter
-    runs-on: ubuntu-latest
-    steps:
-      - uses: Oipie/oipie-api-core/.github/workflows/branch_push@dev
+    uses: ./.github/workflows/branch_push
   deploy:
     runs-on: ubuntu-latest
     needs: tests
