--- a/.github/workflows/merge_master.yaml
+++ b/.github/workflows/merge_master.yaml
@@ -5,11 +5,7 @@ on:
       - "master"
 jobs:
   tests:
-    name: Run tests and linter
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - uses: ./.github/workflows/branch_push
+    uses: ./.github/workflows/branch_push.yaml
   deploy:
     runs-on: ubuntu-latest
     needs: tests
