--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,6 @@ Flask==2.2.2
 Flask-Migrate==3.1.0
 Flask-SQLAlchemy==2.5.1
 greenlet==1.1.3
-gunicorn==20.1.0
 iniconfig==1.1.1
 isort==5.10.1
 itsdangerous==2.1.2
@@ -31,5 +30,6 @@ SQLAlchemy==1.4.40
 toml==0.10.2
 tomli==2.0.1
 tomlkit==0.11.4
+typing_extensions==4.3.0
 Werkzeug==2.2.2
 wrapt==1.14.1
