--- a/.github/workflows/python.yaml
+++ b/.github/workflows/python.yaml
@@ -4,6 +4,9 @@ on:
     branches:
       - "*"
       - "!master"
+  pull_request:
+    branches:
+      - "*"
   workflow_call:
 
 jobs:
@@ -30,14 +33,18 @@ jobs:
           --health-retries 5
     steps:
       - uses: actions/checkout@v3
+      - uses: abatilo/actions-poetry@v2.1.5
+        with:
+          poetry-version: 1.2.0
+      - uses: actions/cache@v3
+        with:
+          path: '**/.venv'
+          key: ${{ runner.os }}-modules-${{ hashFiles('**/poetry.lock') }}
       - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
-          pip install pylint
+        run: poetry install
       - name: Analysing the code with pylint
-        run: pylint ./src/**/*.py
+        run: poetry run pylint ./src/**/*.py
       - name: Run tests
-        run: pytest
+        run: poetry run pytest
         env:
           DATABASE_HOST: postgres
