--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ astroid==2.12.5
 attrs==22.1.0
 autopep8==1.7.0
 click==8.1.3
+dependency-injector==4.40.0
 dill==0.3.5.1
 Flask==2.2.2
 Flask-Migrate==3.1.0
@@ -30,6 +31,7 @@ pylint-plugin-utils==0.7
 pyparsing==3.0.9
 pytest==7.1.2
 python-dotenv==0.20.0
+six==1.16.0
 SQLAlchemy==1.4.40
 toml==0.10.2
 tomli==2.0.1
