ci: fix codeowners

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,2 +1,6 @@
-* @Oipie/backend
+# By default backend developeres do review
+src @Oipie/backend
+tests @Oipie/backend
+
+# CICD and infrastructure files
 .github @Oipie/sre
