--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -18,6 +18,10 @@ jobs:
         run: heroku container:push -a ${{ secrets.HEROKU_APP_NAME }} web
         env:
           HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
+      - name: Relase last container to Heroku
+        run: heroku container:release -a ${{ secrets.HEROKU_APP_NAME }} web
+        env:
+          HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
       - name: Run migrations
         run: heroku run flask db upgrade -a ${{ secrets.HEROKU_APP_NAME }}
         env:
