--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,43 +6,20 @@ authors = ["Your Name <you@example.com>"]
 license = "MIT"
 
 [tool.poetry.dependencies]
-python = "^3.10"
-alembic = "1.8.1"
-astroid = "2.12.5"
-attrs = "22.1.0"
-autopep8 = "1.7.0"
-click = "8.1.3"
-dill = "0.3.5.1"
+dependency-injector = "4.40.0"
 Flask = "2.2.2"
 Flask-Migrate = "3.1.0"
 Flask-SQLAlchemy = "2.5.1"
-greenlet = "1.1.3"
 gunicorn = "20.1.0"
-iniconfig = "1.1.1"
-isort = "5.10.1"
-itsdangerous = "2.1.2"
-Jinja2 = "3.1.2"
-lazy-object-proxy = "1.7.1"
-Mako = "1.2.2"
-MarkupSafe = "2.1.1"
-mccabe = "0.7.0"
-packaging = "21.3"
-platformdirs = "2.5.2"
-pluggy = "1.0.0"
 psycopg2-binary = "2.9.3"
-py = "1.11.0"
-pycodestyle = "2.9.1"
-pyparsing = "3.0.9"
-python-dotenv = "0.20.0"
+python = "^3.10"
 SQLAlchemy = "1.4.40"
-toml = "0.10.2"
-tomli = "2.0.1"
-tomlkit = "0.11.4"
-Werkzeug = "2.2.2"
-wrapt = "1.14.1"
+typing_extensions = "4.3.0"
 
-[tool.poetry.dev-dependencies]
+[tool.poetry.group.dev.dependencies]
 pylint = "2.15.0"
+pylint-flask = "0.6.0"
+pylint-flask-sqlalchemy = "0.2.0"
 pytest = "7.1.2"
 
 [build-system]
