--- a/.github/workflows/pull_request.yaml
+++ b/.github/workflows/pull_request.yaml
@@ -9,7 +9,6 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
-    container: "python:3.10-slim"
     services:
       # Label used to access the service container
       postgres:
@@ -30,14 +29,17 @@ jobs:
           --health-retries 5
     steps:
       - uses: actions/checkout@v3
+      - uses: abatilo/actions-poetry@v2.1.5
+        with:
+          poetry-version: 1.2.0
+      - uses: actions/setup-python@v4
+        with:
+          cache: 'poetry'
       - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
-          pip install pylint
+        run: poetry install
       - name: Analysing the code with pylint
-        run: pylint ./src/**/*.py
+        run: poetry run pylint ./src/**/*.py
       - name: Run tests
-        run: pytest
+        run: poetry run pytest
         env:
           DATABASE_HOST: postgres
