--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -1,9 +1,8 @@
-name: Deploys to master
+name: Deploys to main
 on:
   push:
     branches:
       - "main"
-
 jobs:
   deploy:
     runs-on: ubuntu-latest
@@ -17,5 +16,13 @@ jobs:
         run: heroku container:login
       - name: Build and push to Heroku
         run: heroku container:push -a ${{ secrets.HEROKU_APP_NAME }} web
+        env:
+          HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
+      - name: Relase last container to Heroku
+        run: heroku container:release -a ${{ secrets.HEROKU_APP_NAME }} web
+        env:
+          HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
+      - name: Run migrations
+        run: heroku run flask db upgrade -a ${{ secrets.HEROKU_APP_NAME }}
         env:
           HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
