--- a/.pylintrc
+++ b/.pylintrc
@@ -42,18 +42,18 @@ fail-under=10
 #from-stdin=
 
 # Files or directories to be skipped. They should be base names, not paths.
-ignore=CVS
+ignore=
 
 # Add files or directories matching the regular expressions patterns to the
 # ignore-list. The regex matches against paths and can be in Posix or Windows
 # format. Because '\' represents the directory delimiter on Windows systems, it
 # can't be used as an escape character.
-ignore-paths=
+ignore-paths=^src/config/.*$
 
 # Files or directories matching the regular expression patterns are skipped.
 # The regex matches against base names, not paths. The default value ignores
 # Emacs file locks
-ignore-patterns=^\.#
+ignore-patterns=
 
 # List of module names for which member attributes should not be checked
 # (useful for modules/projects where namespaces are manipulated during runtime
@@ -77,7 +77,7 @@ limit-inference-results=100
 
 # List of plugins (as comma separated values of python module names) to load,
 # usually to register additional checkers.
-load-plugins=
+load-plugins=pylint_flask,pylint_flask_sqlalchemy
 
 # Pickle collected data for later comparisons.
 persistent=yes
@@ -561,7 +561,8 @@ good-names=i,
            k,
            ex,
            Run,
-           _
+           _,
+           id
 
 # Good variable names regexes, separated by a comma. If names match any regex,
 # they will always be accepted
@@ -603,7 +604,7 @@ no-docstring-rgx=^_
 # List of decorators that produce properties, such as abc.abstractproperty. Add
 # to this list to register other decorators that produce valid properties.
 # These decorators are taken in consideration only for invalid-name.
-property-classes=abc.abstractproperty
+property-classes=abc.abstractproperty,abc.ABC,abc.abstractmethod
 
 # Regular expression matching correct type variable names. If left empty, type
 # variable names will be checked with the set naming style.
