--- a/requirements.txt
+++ b/requirements.txt
@@ -24,6 +24,9 @@ psycopg2-binary==2.9.3
 py==1.11.0
 pycodestyle==2.9.1
 pylint==2.15.0
+pylint-flask==0.6
+pylint-flask-sqlalchemy==0.2.0
+pylint-plugin-utils==0.7
 pyparsing==3.0.9
 pytest==7.1.3
 python-dotenv==0.20.0
@@ -31,5 +34,6 @@ SQLAlchemy==1.4.40
 toml==0.10.2
 tomli==2.0.1
 tomlkit==0.11.4
+typing_extensions==4.3.0
 Werkzeug==2.2.2
 wrapt==1.14.1
