--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,8 @@ services:
   postgres:
     container_name: oipie
     image: postgres:14.5
+    volumes:
+      - ./scripts/create-multiple-postgresql-databases.sh:/docker-entrypoint-initdb.d/99-oipie.sh
     ports:
       - "5432:5432"
     environment:
