--- a/.github/workflows/pull_request.yaml
+++ b/.github/workflows/pull_request.yaml
@@ -34,6 +34,7 @@ jobs:
           poetry-version: 1.2.0
       - uses: actions/setup-python@v4
         with:
+          python-version-file: .python-version
           cache: 'poetry'
       - name: Install dependencies
         run: poetry install
