--- a/.github/workflows/pull_request.yaml
+++ b/.github/workflows/pull_request.yaml
@@ -7,6 +7,7 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
+    container: "python:3.10-slim"
     services:
       # Label used to access the service container
       postgres:
@@ -27,18 +28,15 @@ jobs:
           --health-retries 5
     steps:
       - uses: actions/checkout@v3
-      - uses: abatilo/actions-poetry@v2.1.5
-        with:
-          poetry-version: 1.1.15
-      - uses: actions/setup-python@v4
-        with:
-          python-version-file: .python-version
-          cache: 'poetry'
+      - name: Install poetry
+        run: pip install poetry==1.1.15
+      - name: Disable poetry virtualenv on GitHub Actions
+        run: poetry config virtualenvs.create false
       - name: Install dependencies
         run: poetry install
       - name: Analysing the code with pylint
-        run: poetry run pylint ./src/**/*.py
+        run: pylint ./src/**/*.py
       - name: Run tests
-        run: poetry run pytest
+        run: pytest
         env:
           DATABASE_HOST: postgres
