--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,7 @@ Flask-Migrate = "3.1.0"
 Flask-SQLAlchemy = "2.5.1"
 gunicorn = "20.1.0"
 psycopg2-binary = "2.9.3"
-python = "^3.10"
+python = "3.10.6"
 SQLAlchemy = "1.4.40"
 typing_extensions = "4.3.0"
 
