ci: fix virtualenv config
Failing virtualenv installation due to `poetry.toml` file.

--- a/.github/workflows/pull_request.yaml
+++ b/.github/workflows/pull_request.yaml
@@ -31,7 +31,7 @@ jobs:
       - name: Install poetry
         run: pip install poetry==1.1.15
       - name: Disable poetry virtualenv on GitHub Actions
-        run: poetry config virtualenvs.create false
+        run: poetry config virtualenvs.create false --local
       - name: Install dependencies
         run: poetry install
       - name: Analysing the code with pylint
