--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,13 @@
 [tool.poetry]
+authors = [
+  "Daniel Ramos <danielramos@acidtango.com>",
+  "Jaume Moreno <jaume@acidtango.com>",
+  "Diego Machín <diego@acidtango.com>",
+  "Jorge Bodega <jorge@acidtango.com>",
+]
 name = "oipie-api-core"
 version = "0.0.1"
-description = ""
-authors = ["Your Name <you@example.com>"]
+description = "API to list recipes"
 license = "MIT"
 
 [tool.poetry.dependencies]
