--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,7 +21,7 @@ python = "3.10.6"
 SQLAlchemy = "1.4.40"
 typing_extensions = "4.3.0"
 
-[tool.poetry.dev-dependencies]
+[tool.poetry.group.dev.dependencies]
 pylint = "2.15.0"
 pylint-flask = "0.6.0"
 pylint-flask-sqlalchemy = "0.2.0"
