--- a/.github/workflows/pull_request.yaml
+++ b/.github/workflows/pull_request.yaml
@@ -28,11 +28,14 @@ jobs:
           --health-retries 5
     steps:
       - uses: actions/checkout@v3
+      - name: Install poetry
+        run: pip install poetry==1.2.0
+      - name: Disable poetry virtualenv on GitHub Actions
+        run: poetry config virtualenvs.create false --local
+      - name: Check dependencies
+        run: poetry lock --check
       - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
-          pip install pylint
+        run: poetry install
       - name: Analysing the code with pylint
         run: pylint ./src/**/*.py
       - name: Run tests
