chore: add black as formatter to be better compliant with PEP8

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,6 @@
+[tool.black]
+line-length = 100
+
 [tool.poetry]
 authors = [
   "Daniel Ramos <danielramos@acidtango.com>",
@@ -22,6 +25,7 @@ SQLAlchemy = "1.4.40"
 typing_extensions = "4.3.0"
 
 [tool.poetry.group.dev.dependencies]
+black = "22.8.0"
 pylint = "2.15.0"
 pylint-flask = "0.6.0"
 pylint-flask-sqlalchemy = "0.2.0"
