--- a/.github/workflows/pull_request.yaml
+++ b/.github/workflows/pull_request.yaml
@@ -5,7 +5,19 @@ on:
       - "main"
 
 jobs:
+  skip-draft:
+    name: skip draft
+    runs-on: ubuntu-latest
+    timeout-minutes: 1
+    steps:
+      - name: fail on draft
+        if: github.event.pull_request.draft == true
+        run: echo "is a draft PR, failing..." && exit 1
+      - name: success
+        run: echo "is not a draft PR"
+
   test:
+    needs: skip-draft
     runs-on: ubuntu-latest
     container: "python:3.10.6-slim"
     services:
@@ -44,3 +56,23 @@ jobs:
         run: pytest
         env:
           DATABASE_HOST: postgres
+
+  docker-build:
+    needs: skip-draft
+    name: Build Docker Container
+    runs-on: ubuntu-latest
+    timeout-minutes: 5
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+      - name: Build and push docker image
+        uses: docker/build-push-action@v3.0.0
+        with:
+          context: .
+          file: ./Dockerfile
+          push: false
+          tags: api-core:latest
