--- a/.github/workflows/pull_request.yaml
+++ b/.github/workflows/pull_request.yaml
@@ -27,7 +27,7 @@ jobs:
         image: postgres:14.5
         # Provide the password for postgres
         env:
-          POSTGRES_DB: oipie
+          POSTGRES_DB: oipie_tests
           POSTGRES_PASSWORD: password
           POSTGRES_USER: oipie
         # Set health checks to wait until postgres has started
