--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,18 @@
 [tool.black]
 line-length = 100
 
+[tool.poe.tasks]
+format = "black ."
+"format:check" = "black --check ."
+lint = "pylint --output-format colorized src/**/*.py"
+"lint:check" = "pylint src/**/*.py"
+"migration:up" = { "cmd" = "flask db upgrade", "env" = { "FLASK_APP" = "src/app" } }
+"migration:down" = { "cmd" = "flask db downgrade", "env" = { "FLASK_APP" = "src/app" } }
+"run:checks" = ["format-check", "lint-check"]
+"start:dev" = { "cmd" = "flask run", "env" = { "FLASK_APP" = "src/app" } }
+"start:debug" = { "cmd" = "flask run", "env" = { "FLASK_APP" = "src/app", "FLASK_DEBUG" = 1 } }
+test = "pytest"
+
 [tool.poetry]
 authors = [
   "Daniel Ramos <danielramos@acidtango.com>",
@@ -14,6 +26,7 @@ description = "API to list recipes"
 license = "MIT"
 
 [tool.poetry.dependencies]
+argon2-cffi = "21.3.0"
 dependency-injector = "4.40.0"
 Flask = "2.2.2"
 Flask-Migrate = "3.1.0"
@@ -23,7 +36,6 @@ psycopg2-binary = "2.9.3"
 python = "3.10.6"
 SQLAlchemy = "1.4.40"
 typing_extensions = "4.3.0"
-argon2-cffi = "^21.3.0"
 
 [tool.poetry.group.dev.dependencies]
 black = "22.8.0"
