--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -3,6 +3,7 @@
     "ms-python.black-formatter",
     "ms-python.pylint",
     "ms-python.python",
-    "ms-python.vscode-pylance"
+    "ms-python.vscode-pylance",
+    "SonarSource.sonarlint-vscode"
   ]
 }
