--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -18,7 +18,7 @@ jobs:
         run: heroku container:push -a ${{ secrets.HEROKU_APP_NAME }} --recursive
         env:
           HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
-      - name: Relase last container to Heroku
-        run: heroku container:release -a ${{ secrets.HEROKU_APP_NAME }} web release
-        env:
-          HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
+#      - name: Relase last container to Heroku
+#        run: heroku container:release -a ${{ secrets.HEROKU_APP_NAME }} web release
+#        env:
+#          HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
