--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,8 +14,8 @@ lint = "pylint --output-format colorized src/**/*.py"
 test = "pytest"
 
   [tool.poe.tasks."migration:generate"]
-  cmd="flask db migrate"
-  args=[{ name = "message", options = ["-m", "--message"], required = false }]
+  cmd="flask db migrate -m $message"
+  args=[{ name = "message", options = ["-m", "--message"], required = true, help = "Migration's name" }]
 
 [tool.poetry]
 authors = [
